--- a/FV_Accelerator/src/frmMain.form
+++ b/FV_Accelerator/src/frmMain.form
@@ -45,7 +45,7 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="https://192.168.118.35:8080/identityiq"/>
         </properties>
       </component>
       <component id="8b04e" class="javax.swing.JTable" binding="table1" default-binding="true">
