--- a/src/forms/FormMain.form
+++ b/src/forms/FormMain.form
@@ -213,6 +213,14 @@
               <text value="Unique"/>
             </properties>
           </component>
+          <component id="921da" class="javax.swing.JButton" binding="mapButton" default-binding="true">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Map"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
